# career-path-architect

./: .gitignore  API.md  BUILD_SUMMARY.md  CONTRIBUTING.md  CRITICAL_REVIEW.md  DEVELOPMENT.md  FINAL_REVIEW.md  FINAL_SUMMARY.md  LICENSE  PRE_RELEASE_CHECKLIST.md  QUICKSTART.md  README.md  RELEASE_READY.md  REVIEW_ROUNDS_3-12.md  TECHNICAL_SPEC.md  TEST_COVERAGE.md  dev.sh  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.git-hooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: security-scan.yml
apps/backend/: .env.example  README.md  package.json  pyproject.toml  test_workflow.py
apps/backend/src/career_path/: __init__.py  cache.py  comparison.py  constants.py  health.py  main.py  model_config.py  progress.py  rate_limit.py  utils.py  validation.py
apps/backend/src/career_path/graph/: nodes.py  state.py  workflow.py
apps/backend/tests/: __init__.py  conftest.py  test_cache.py  test_comparison.py  test_health.py  test_main.py  test_nodes.py  test_progress.py  test_rate_limit.py  test_utils.py  test_validation.py  test_workflow.py
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: RoadmapCanvas.tsx
demo/: INSTRUCTIONS.md  sample-resume.txt
scripts/: install-git-hooks.sh
